# grok-ozempic

./: .codacy.yml  .codacyignore  .codecov.yml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: aikido.yml  codecov.yml  docker-snyk.yml  docker.yml  rust.yml  snyk.yml
.kilo/: kilo.json
.kilo/plans/: 1780621180117-swift-knight.md  1782262003506-testing-alignment-ci.md  complexity-reduction.md
.kilo/skills/dbt/: local.patch
.kilo/skills/dbt/skills/configuring-dbt-mcp-server/: SKILL.md
dissect/: README.md
dissect/grok-1/: baseline.json  structural-manifest.json
docs/: ARCHITECTURE.md  artifact-compatibility-plan.md  dissect-manifest.md  first-quantization-target.md  grok1-saaq-artifact-flow.md
reports/grok-1-official__ckpt-0/: experts.md  inventory.md  routing-report.md  saaq-readiness.md  stats.md
src/: artifact.rs  error.rs  lib.rs  types.rs
src/core/: alignment.rs  backend.rs  dry_run.rs  gguf.rs  grok1_data.rs  grok1_inventory.rs  inventory.rs  manifest.rs  mod.rs  npy.rs  olmoe.rs  ozempic.rs  precision.rs  projector.rs  quantizer.rs  selection.rs  stream.rs  weight_pack.rs  weight_pack_read.rs
src/reports/: detector.rs  mod.rs  schema.rs  templates.rs  tests.rs  validator.rs  writer.rs
