[package]
name = "grok-ozempic"
version = "0.1.0"
edition = "2024"
description = "SNN-logic quantization for Grok models — turning fat into spikes"
repository = "https://github.com/Spikenaut/grok-ozempic"
license = "GPL-3.0-or-later"
keywords = ["snn", "spiking", "quantization", "moe", "grok"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
safetensors = "0.4"          # optional HF-style shards (JAX workflows often use .npy via npy module)
memmap2 = "0.9"              # zero-copy memory-mapped file I/O for out-of-core streaming
half = "2.4"                 # FP16 (f16) type for mixed-precision router weights
tokio = { version = "1.0", features = ["full"], optional = true }  # future async loading

[features]
default = []
async = ["tokio"]

# Standalone crate when nested under a parent workspace (see parent Cargo.toml).
[workspace]
